--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <html>
-    <h2>Joe Low's Data Science Portfolio</h2>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta
+          name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <link rel="icon" href="images/team1.jng" type="image/png" />
+        <title>Joe Low's DS Portfolio</title>
+    
+        <!-- Bootstrap CSS -->
+    
+        <!-- main css -->
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+      </head>
 </html>
