--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
           />
           <link rel="icon" href="images/team1.jng" type="image/png" />
-          <title>Chan Chun Yuan's DS Portfolio</title>
+          <title>Joe Low's DS Portfolio</title>
       
           <!-- Bootstrap CSS -->
       
