--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
           />
-          <link rel="icon" href="images/team1.jng" type="image/png" />
+          <link rel="icon" href="images/JoeLow.png" type="image/png" />
           <title>Joe Low's DS Portfolio</title>
       
           <!-- Bootstrap CSS -->
@@ -66,12 +66,13 @@
           <!-- Header -->
           <div class="w3-container" style="margin-top:80px" id="header">
             <h1 class="w3-jumbo"><b>Joe Low's <br>Data Science Portfolio</b></h1>
-          </div>
+            <img src="images/JoeLowcover.png" alt="Count plot" style="width:100%;cursor:pointer" onclick="onClick(this)" class="w3-hover-opacity" height="225">
+        </div>
       
           <!-- About me -->
           <div class="w3-container" style="margin-top:30px" id="about-me">
             <h1 class="w3-xxxlarge w3-text-red"><i class="fa fa-user-alt" style="font-size:40px;color:red;padding-right: 15px"></i><b>About me.</b></h1>
-            <hr style="width:50px;border:5px solid red" class="w3-round">
+            <hr style="width:50px;border:5px solid rgb(46, 93, 124)" class="w3-round">
             <p><h1 class="w3-xlarge w3-text-black"><b>Welcome!</b></h1></p>
             <p>Aspiring Data Scientist during my free time, Perspiring Engineer by practice!
             <br>I am actively looking for a career in data science. Contact me to see what I can bring to the table!
