--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <header class="top_menu w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
           <!-- Top menu on small screens -->
           <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
-          <span>Joe Low's Data Science Portfolio</span>
+          <span>Joe Low'ss Data Science Portfolio</span>
         </header>
       
         <header class="side_menu">
