--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <!-- Header -->
           <div class="w3-container" style="margin-top:80px" id="header">
             
-            <img src="images/JoeLowcover.png" alt="Count plot" style="width:100%;cursor:pointer" onclick="onClick(this)" class="w3-hover-opacity" height="225">
+            <img src="images/JoeLowcover.png" alt="" style="width:100%;cursor:pointer" onclick="onClick(this)" class="w3-hover-opacity" height="300">
         </div>
       
           <!-- About me -->
