--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@
           <!-- Header -->
           <div class="w3-container" style="margin-top:80px" id="header">
             
-            <img src="images/JoeLowcover.png" alt="" style="width:100%;cursor:pointer" onclick="onClick(this)" class="w3-hover-opacity" height="425">
+            <img src="images/JoeLowcover.png" alt="" style="width:100%;cursor:pointer" onclick="onClick(this)" class="w3-hover-opacity" height="525">
         </div>
       
           <!-- About me -->
           <div class="w3-container" style="margin-top:30px" id="about-me">
-            <h1 class="w3-xxxlarge w3-text-red"><i class="fa fa-user-alt" style="font-size:40px;color:            <h1 class="w3-xxxlarge w3-text-red"><i class="fa fa-user-alt" style="font-size:40px;color:rgb(46, 93, 124);padding-right: 15px"></i><b>About me.</b></h1>
-            <hr style="width:50px;border:5px solid rgb(46, 93, 124)" class="w3-round">
+            <h1 class="w3-xxxlarge w3-text-red"><i class="fa fa-user-alt" style="font-size:40px;color:rgb(46, 93, 124);padding-right: 15px"></i><b>About me.</b></h1>
             <hr style="width:50px;border:5px solid rgb(46, 93, 124)" class="w3-round">
             <p><h1 class="w3-xlarge w3-text-black"><b>Welcome!</b></h1></p>
             <p>Aspiring Data Scientist during my free time, Perspiring Engineer by practice!
