--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1 class="w3-xxxlarge w3-text-black"><i class="fa fa-user-alt" style="font-size:40px;color:rgb(46, 93, 124);padding-right: 15px"></i><b>About me.</b></h1>
             <hr style="width:50px;border:5px solid rgb(46, 93, 124)" class="w3-round">
             <p><h1 class="w3-xlarge w3-text-black"><b>Welcome!</b></h1></p>
-            <p>Aspiring Data Scientist during my free time, Perspiring Engineer by practice!
+            <p>Aspiring Data Scientist with IBM certified Data Scince Profesional, Perspiring IT Profesional by practice!
             <br>I am actively looking for a career in data science. Contact me to see what I can bring to the table!
           </div>
       
