--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           </div>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="fea91d9b-b1c3-4b67-a877-78270f2442f6" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ab4433e9-c536-468c-84e2-3b913f3bc496" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="31b858e9-325f-49cf-afff-ca92934b5b99" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <!--Methodology -->
           <div class="w3-container" style="margin-top:30px" id="methodology">
             <h1 class="w3-xxxlarge w3-text-black"><i class="fas fa-tools" style="font-size:40px;color:rgb(46, 93, 124);padding-right: 15px"></i><b>Methodology.</b></h1>
