--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h1 class="w3-xxxlarge w3-text-black"><i class="fa fa-tasks" style="font-size:40px;color:rgb(46, 93, 124);padding-right: 15px"></i><b>Project.</b></h1>
             <hr style="width:50px;border:5px solid rgb(46, 93, 124)" class="w3-round">
         
-            <p><h1 class="w3-xlarge w3-text-black"><b>#1 Credit Card Fraud Detectiom</b>
+            <p><h1 class="w3-xlarge w3-text-black"><b>#1 Credit Card Fraud Detection</b>
                   <a href="https://colab.research.google.com/drive/1GV5KX1KPyIemSDWP2DfA13mz0qWcDMeN?usp=sharing">
                     <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"/>
                   </a>
