--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="ab4433e9-c536-468c-84e2-3b913f3bc496" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="31b858e9-325f-49cf-afff-ca92934b5b99" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="99c59167-a639-49b4-8d74-f41fd3c25833" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8f575281-009b-4079-af36-9034248085da" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+          
           <!--Methodology -->
           <div class="w3-container" style="margin-top:30px" id="methodology">
             <h1 class="w3-xxxlarge w3-text-black"><i class="fas fa-tools" style="font-size:40px;color:rgb(46, 93, 124);padding-right: 15px"></i><b>Methodology.</b></h1>
