--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="31b858e9-325f-49cf-afff-ca92934b5b99" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="99c59167-a639-49b4-8d74-f41fd3c25833" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8f575281-009b-4079-af36-9034248085da" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+          <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a6fc98c3-95fa-434e-a6f5-a1a9b5249d92" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
           
           <!--Methodology -->
           <div class="w3-container" style="margin-top:30px" id="methodology">
