--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@
             </ul></p>
       
           <p><h1 class="w3-xlarge w3-text-black"><b>#3 Natural Language Processing (Sentiments Analysis)</b>
-            <a href="https://colab.research.google.com/drive/12FUvpuw4aAHPdcAvioIU89izsqNU1m4p?usp=sharing">
+            <a href="https://colab.research.google.com/drive/1HH-2sb3CLzBC-7adLhtx9gv38uTl8ROm?usp=sharing">
               <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"/>
             </a></h1>   
             <ul>        
-              <li>Business question<span style="padding-left:68px">:</span> What is the sales forecast after advertistement expenditures on different platform? </li>
+              <li>Business question<span style="padding-left:68px">:</span> Sentiment Analysis is often performed on text data to help businesses to moniter their brands and products sentiments, especially in customer feedback and also understand what they need. It is a natural language processing technique that we use to determine whether our data is positive, neutral or negative. </li>
               <li>Exploratory data analysis<span style="padding-left:10px">:</span></li>
             </ul>
             <!-- EDA -->
